WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
313216
REGRESSION(
306364@main
): PDF scrollbar does not adapt to dark appearance
https://bugs.webkit.org/show_bug.cgi?id=313216
Summary
REGRESSION(306364@main): PDF scrollbar does not adapt to dark appearance
Abrar Rahman Protyasha
Reported
2026-04-24 02:20:23 PDT
rdar://174763396
Attachments
Add attachment
proposed patch, testcase, etc.
Abrar Rahman Protyasha
Comment 1
2026-04-24 03:59:40 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/63516
EWS
Comment 2
2026-04-24 15:15:09 PDT
Committed
311985@main
(cc5fbc12b447): <
https://commits.webkit.org/311985@main
> Reviewed commits have been landed. Closing PR #63516 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug