Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/UnifiedPDFPlugin.mm
@@ -1650,6 +1650,7 @@ void UnifiedPDFPlugin::createScrollbarsController()
         return;
 
     page->chrome().client().ensureScrollbarsController(*page, *this);
+    updateScrollbarOverlayStyle();
 }
 
 DelegatedScrollingMode UnifiedPDFPlugin::scrollingMode() const
@@ -1709,6 +1710,24 @@ void UnifiedPDFPlugin::scrollbarStyleChanged(WebCore::ScrollbarStyle, bool force
         return;
 
     updateLayout();
+}
+
+void UnifiedPDFPlugin::updateScrollbarOverlayStyle()
+{
+    if (!isFullMainFramePlugin())
+        return;
+
+    RefPtr page = this->page();
+    if (!page)
+        return;
+
+    using enum WebCore::ScrollbarOverlayStyle;
+    setScrollbarOverlayStyle(page->useDarkAppearance() ? Light : Default);
+
+    if (m_scrollingNodeID) {
+        if (RefPtr scrollingCoordinator = page->scrollingCoordinator())
+            scrollingCoordinator->setScrollingNodeScrollableAreaGeometry(*m_scrollingNodeID, *this);
+    }
 }
 
 void UnifiedPDFPlugin::updateScrollbars()
@@ -4921,6 +4940,8 @@ void UnifiedPDFPlugin::effectiveAppearanceDidChange()
 
     if (RefPtr rootLayer = m_rootLayer)
         rootLayer->setBackgroundColor(pluginBackgroundColor());
+
+    updateScrollbarOverlayStyle();
 }
 
 ViewportConfiguration::Parameters UnifiedPDFPlugin::viewportParameters()
